<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example.sa.app</groupId>
  <artifactId>workshop-project</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  

  	<properties>
	 <!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  -->  
	  <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
	    <cucumber.java.version>1.1.5</cucumber.java.version>
	    <java.version>1.7</java.version>
	    <junit.version>4.11</junit.version>	    
	    <slf4j.version>1.6.4</slf4j.version>
	    <spring.version>3.2.3.RELEASE</spring.version>	    
	    <surefire.fork.count>6</surefire.fork.count>
  	</properties>

  
  	
 	
    <dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	
	<!-- Log Dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	
		
	  <!-- Selenium Dependencies -->
		<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-remote-driver</artifactId>
        	<version>2.45.0</version>
    	</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.45.0</version>
		</dependency>
		<dependency>
		<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>18.0</version>
		</dependency>	
		<dependency>
		<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>
		
		<!-- Cucumber Dependencies -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>${cucumber.java.version}</version>
		</dependency>
		<dependency>
	          <groupId>info.cukes</groupId>
	          <artifactId>cucumber-java</artifactId>
	          <version>${cucumber.java.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>info.cukes</groupId>
	        <artifactId>cucumber-junit</artifactId>
	        <version>${cucumber.java.version}</version>
	    </dependency>
	    <dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>1.1.3</version>
		</dependency> 	        
	  
	
	<!-- Spring Framework dependencies -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
			<dependency>
			<groupId>com.automation.softa</groupId>
			<artifactId>softa</artifactId>
			<version>1.0.0-R1</version>
		</dependency>

		

		
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>${basedir}/src/test/java/</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<generatedSourcesDirectory>target/generated-sources</generatedSourcesDirectory>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			
			 
			 
             <!-- Configuration for Runnning Entire Testing -->
            <plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14</version>
				<executions>
					<execution>
						<id>default-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<forkCount>${surefire.fork.count}</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>
								<!-- Include for Smarttool execution -->
								<include>**/RunAppTest*</include>																
							</includes>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</execution>
				</executions>
			</plugin>			
			 
		</plugins>
	</build>
	
  </project>

